# cookiecutter-python-project

./: .gitignore  .pyup.yml  .travis.yml  README.md  cookiecutter.json  requirements.txt
tests/: test_01.json  test_02.json  test_run.py
{{ cookiecutter.project_name }}/: .coveragerc  .pylintrc  .python-version  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.rst  requirements.txt  setup.cfg  tox.ini
{{ cookiecutter.project_name }}/docs/: conf.py  index.rst
{{ cookiecutter.project_name }}/tests/unit/: test_import_root_module.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: main.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.rst  docker-compose.yml  requirements.txt  setup.cfg  setup.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py
