[aliases]
test = pytest


[doc]
source-dir = docs/
build-dir = docs/_build
all_files = 1


[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(.(?P<build>\w?\d+))?
serialize =
    {major}.{minor}.{patch}.{build}
    {major}.{minor}.{patch}
tag = True

[bumpversion:file:setup.cfg]
[bumpversion:file:setup.py]
[bumpversion:file:VERSION]
[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]


[metadata]
name = {{ cookiecutter.project_slug }}
description = {{ cookiecutter.project_description }}
long_description = file: README.rst, CHANGELOG.rst, LICENSE
author = {{ cookiecutter.author_full_name }}
author_email = {{ cookiecutter.author_email }}
keywords = {{ cookiecutter.project_keywords }}
license = {{ cookiecutter.project_license }}
url = https://{{ cookiecutter.git_provider }}/{{ cookiecutter.git_repository }}
classifiers =
    License :: OSI Approved :: {{ cookiecutter.project_license }}
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
setup_requires =
    bump2version==1.0.1
    gitchangelog==3.0.4
    pre-commit==2.6.0
    setuptools==50.3.0
    Sphinx==7.0.0
    pytest-runner==5.2
tests_require =
    coverage==4.5.1
    pylint==1.9.1
    pytest==3.6.0
    pytest-cov==2.5.1
    pytest-pylint==0.9.0
    tox==3.0.0


[options.package_data]


[options.packages.find]
exclude = tests


[tool:pytest]
addopts =
    --doctest-modules
    --cov
    --cov-report html
    --cov-report term
    --cov-report xml
    --junit-xml=reports/junit.xml
    --pylint
    --verbose
python_files = test*/**/*.py
testpaths = {{ cookiecutter.project_slug }} tests


[wheel]
universal = 1
